--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,13 @@ classifier =
 packages =
     clapton
 
+[entry_points]
+console_scripts =
+    clapton-api = clapton.cmd.api:main
+
+oslo.config.opts =
+    clapton = clapton.opts:list_opts
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
