--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -1,6 +1,8 @@
 [DEFAULT]
 
 # The list of modules to copy from oslo-incubator.git
+module=fileutils
+module=service
 
 # The base module to hold the copy of openstack.common
 base=clapton
