--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,57 @@
-# The order of packages is significant, because pip processes them in the order
-# of appearance. Changing the order has an impact on the overall integration
-# process, which may cause wedges in the gate later.
-
-pbr>=0.6,!=0.7,<1.0
-Babel>=1.3
+aioeventlet==0.4
+alembic==0.7.6
+amqp==1.4.6
+aniso8601==1.0.0
+anyjson==0.3.3
+Babel==1.3
+## !! Could not determine repository location
+clapton==0.0.0
+debtcollector==0.4.0
+decorator==3.4.2
+eventlet==0.17.4
+extras==0.0.3
+Flask==0.10.1
+Flask-RESTful==0.3.3
+futures==3.0.2
+greenlet==0.4.7
+ipaddr==2.1.11
+iso8601==0.1.10
+itsdangerous==0.24
+Jinja2==2.7.3
+kombu==3.0.26
+linecache2==1.0.0
+Mako==1.0.1
+MarkupSafe==0.23
+msgpack-python==0.4.6
+netaddr==0.7.14
+netifaces==0.10.4
+oslo.config==1.11.0
+oslo.context==0.3.0
+oslo.db==1.9.0
+oslo.i18n==1.6.0
+oslo.log==1.2.0
+oslo.messaging==1.11.0
+oslo.middleware==1.2.0
+oslo.serialization==1.5.0
+oslo.utils==1.5.0
+pbr==0.11.0
+python-mimeparse==0.1.4
+pytz==2015.4
+PyYAML==3.11
+simplegeneric==0.8.1
+six==1.9.0
+SQLAlchemy==0.9.9
+sqlalchemy-migrate==0.9.6
+sqlparse==0.1.15
+stevedore==1.4.0
+Tempita==0.5.2
+testresources==0.2.7
+testscenarios==0.5.0
+testtools==1.8.0
+traceback2==1.4.0
+trollius==1.0.4
+unittest2==1.0.1
+WebOb==1.4.1
+Werkzeug==0.10.4
+wrapt==1.10.4
+WSME==0.6.4
