--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,48 @@
-aioeventlet==0.4
-alembic==0.7.6
-amqp==1.4.6
-aniso8601==1.0.0
-anyjson==0.3.3
-Babel==1.3
+# The order of packages is significant, because pip processes them in the order
+# of appearance. Changing the order has an impact on the overall integration
+# process, which may cause wedges in the gate later.
+aioeventlet>=0.4
+alembic>=0.8.0
+amqp>=1.4.0
+anyjson>=0.3.3
+Babel>=1.3
 ## !! Could not determine repository location
-clapton==0.0.0
-debtcollector==0.4.0
-decorator==3.4.2
-eventlet==0.17.4
-extras==0.0.3
-Flask==0.10.1
-Flask-RESTful==0.3.3
-futures==3.0.2
-greenlet==0.4.7
-ipaddr==2.1.11
-iso8601==0.1.10
-itsdangerous==0.24
-Jinja2==2.7.3
-kombu==3.0.26
-linecache2==1.0.0
-Mako==1.0.1
-MarkupSafe==0.23
-msgpack-python==0.4.6
-netaddr==0.7.14
-netifaces==0.10.4
-oslo.config==1.11.0
-oslo.context==0.3.0
-oslo.db==1.9.0
-oslo.i18n==1.6.0
-oslo.log==1.2.0
-oslo.messaging==1.11.0
-oslo.middleware==1.2.0
-oslo.serialization==1.5.0
-oslo.utils==1.5.0
-pbr==0.11.0
-python-mimeparse==0.1.4
-pytz==2015.4
-PyYAML==3.11
-simplegeneric==0.8.1
-six==1.9.0
-SQLAlchemy==0.9.9
-sqlalchemy-migrate==0.9.6
-sqlparse==0.1.15
-stevedore==1.4.0
-Tempita==0.5.2
-testresources==0.2.7
-testscenarios==0.5.0
-testtools==1.8.0
-traceback2==1.4.0
-trollius==1.0.4
-unittest2==1.0.1
-WebOb==1.4.1
-Werkzeug==0.10.4
-wrapt==1.10.4
-WSME==0.6.4
+debtcollector>=0.3.0 # Apache-2.0
+decorator>=3.4.0
+eventlet>=0.17.4
+extras
+Flask<1.0,>=0.10
+futures>=3.0;python_version=='2.7' or python_version=='2.6'
+greenlet>=0.3.2
+iso8601>=0.1.9
+Jinja2>=2.6 # BSD License (3 clause)
+kombu>=3.0.7
+Mako>=0.4.0
+msgpack-python>=0.4.0
+netaddr!=0.7.16,>=0.7.12
+netifaces>=0.10.4
+oslo.config>=2.3.0 # Apache-2.0
+oslo.context>=0.2.0 # Apache-2.0
+oslo.db>=2.4.1 # Apache-2.0
+oslo.i18n>=1.5.0 # Apache-2.0
+oslo.log>=1.8.0 # Apache-2.0
+oslo.messaging!=1.17.0,!=1.17.1,!=2.6.0,!=2.6.1,>=1.16.0 # Apache-2.0
+oslo.middleware>=2.8.0 # Apache-2.0
+oslo.serialization>=1.4.0 # Apache-2.0
+oslo.utils!=2.6.0,>=2.0.0 # Apache-2.0
+pbr>=1.6
+pytz>=2013.6
+PyYAML>=3.1.0
+six>=1.9.0
+SQLAlchemy<1.1.0,>=0.9.9
+sqlalchemy-migrate>=0.9.6
+stevedore>=1.5.0 # Apache-2.0
+testresources>=0.2.4
+testscenarios>=0.4
+testtools>=1.4.0
+trollius>=1.0
+unittest2
+WebOb>=1.2.3
+Werkzeug>=0.7 # BSD License
+wrapt>=1.7.0 # BSD License
+WSME>=0.7
